--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      class="tablet:flex tablet:justify-center tablet:items-center"
+      id="root"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
